samples/_failures_safe/1761345097_96fb63_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5641b7e9.c: In function ‘main’:
./samples/SAFE/__tmp_5641b7e9.c:137:24: error: missing terminating " character
  137 |                 printf("Error: In
      |                        ^~~~~~~~~~
./samples/SAFE/__tmp_5641b7e9.c:137:17: error: expected expression at end of input
  137 |                 printf("Error: In
      |                 ^~~~~~
./samples/SAFE/__tmp_5641b7e9.c:137:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5641b7e9.c:137:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5641b7e9.c:137:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5641b7e9.c:137:17: error: expected declaration or statement at end of input
